--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ricochet Rumbles</title>
     <link rel="stylesheet" href="Styles/index.css" />
     <link rel="icon" type="image/x-icon" href="Assets/cannon.png" />
   </head>
