--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1 class="turnCard"></h1>
       <div id="board"></div>
       <div id="controlls"></div>
+      <div id="restart"></div>
     </div>
     <script src="scripts/index.js" type="module" charset="UTF-8"></script>
   </body>
