Timer Implement with localstorage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="turnCard"></h1>
+      <div class="heading">
+        <h1 class="turnCard"></h1>
+        <div id="timer">00:00</div>
+      </div>
       <div id="board"></div>
       <div id="controlls"></div>
       <div id="restart"></div>
