--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
       <div class="heading">
         <h1 class="turnCard"></h1>
-        <div id="timer">00:00</div>
+        <div class="timer_container">
+          <div id="timer">00:00</div>
+          <div id="pause"></div>
+        </div>
       </div>
       <div id="board"></div>
       <div id="controlls"></div>
