--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="Styles/index.css" />
     <link rel="icon" type="image/x-icon" href="Assets/cannon.png" />
   </head>
+
   <body>
+    <div>
+      <audio id="click_audio" src="/Assets/click.mp3" />
+      <audio id="hover_audio" src="/Assets/hover.mp3" />
+      <audio id="gameover_audio" src="/Assets/gameOver.mp3" />
+      <audio id="collision_audio" src="/Assets/collision.mp3" />
+    </div>
     <div class="container">
       <div class="heading">
         <h1 class="turnCard"></h1>
