responsive audio with pause and currentTime, sound for pause and play

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   </head>
 
   <body>
-    <div>
+    <div id="audio">
       <audio id="click_audio" src="/Assets/click.mp3" />
       <audio id="hover_audio" src="/Assets/hover.mp3" />
       <audio id="gameover_audio" src="/Assets/gameOver.mp3" />
       <audio id="collision_audio" src="/Assets/collision.mp3" />
+      <audio id="pause_audio" src="/Assets/pause.mp3" />
     </div>
     <div class="container">
       <div class="heading">
