Semiricochet breaks on non reflection collisions

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <audio id="gameover_audio" src="/Assets/gameOver.mp3" />
       <audio id="collision_audio" src="/Assets/collision.mp3" />
       <audio id="pause_audio" src="/Assets/pause.mp3" />
+      <audio id="semiRicochetBreakAudio" src="/Assets/semiRicochetBreak.mp3" />
     </div>
     <div class="container">
       <div class="heading">
