btn card with pause, restart, undo, redo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         <h1 class="turnCard"></h1>
         <div class="timer_container">
           <div id="timer">00:00</div>
-          <div id="pause"></div>
+          <div class="btnCard">
+            <div id="pause"></div>
+            <div id="restart"></div>
+            <div id="undo"></div>
+            <div id="redo"></div>
+          </div>
         </div>
       </div>
       <div id="board"></div>
