BugFix : restart id repeated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div id="board"></div>
       <div id="controlls"></div>
-      <div id="restart"></div>
+      <div id="restartGameOver"></div>
     </div>
     <script src="scripts/index.js" type="module" charset="UTF-8"></script>
   </body>
