Game History Card in game

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Ricochet Rumbles</title>
     <link rel="stylesheet" href="Styles/index.css" />
     <link rel="icon" type="image/x-icon" href="Assets/cannon.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -30,7 +37,12 @@
           </div>
         </div>
       </div>
-      <div id="board"></div>
+      <div class="gameBox">
+        <div id="board"></div>
+        <div class="history">
+          <h1>History</h1>
+        </div>
+      </div>
       <div id="controlls"></div>
       <div id="restartGameOver"></div>
     </div>
