--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
       <audio id="collision_audio" src="/Assets/collision.mp3" />
       <audio id="pause_audio" src="/Assets/pause.mp3" />
       <audio id="semiRicochetBreakAudio" src="/Assets/semiRicochetBreak.mp3" />
+      <audio id="swapAudio" src="/Assets/swap.mp3" />
+      <audio id="gameStartAudio" src="/Assets/gameStart.mp3" />
     </div>
     <div class="container">
       <div class="heading">
         <h1 class="turnCard"></h1>
         <div class="timer_container">
-          <div id="timer">00:00</div>
+          <div id="timer">00:00:00</div>
           <div class="btnCard">
             <div id="pause"></div>
             <div id="restart"></div>
