undo redo implemeted for broken SemiRicochet, replay done

--- a/replay.html
+++ b/replay.html
@@ -30,27 +30,16 @@
       <div class="heading">
         <h1 class="turnCard"></h1>
         <div class="timer_container">
-          <div id="timer">00:00:00</div>
           <div class="btnCard">
-            <div id="pause"></div>
             <div id="restart"></div>
-            <div id="undo"></div>
-            <div id="redo"></div>
           </div>
         </div>
       </div>
-      <div class="gameBox">
-        <div id="board"></div>
-        <div class="history">
-          <h1>History</h1>
-        </div>
-      </div>
-      <div id="controlls"></div>
+      <div id="board"></div>
       <div>
-        <div id="restartGameOver"></div>
-        <div id="replayGameOver"></div>
+        <div id="newGame"></div>
       </div>
     </div>
-    <script src="scripts/index.js" type="module" charset="UTF-8"></script>
+    <script src="scripts/replay.js" type="module" charset="UTF-8"></script>
   </body>
 </html>
