Updated write history and turn card for bot

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
     <div class="container">
       <div class="menu">
+        <h1>Ricochet Rumbles</h1>
+
         <div class="menu-item">
           <a href="http://localhost:5500/twoPlayer.html" class="menu-item"
             >2 Player</a
