--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
   <body>
     <div class="container">
       <div class="menu">
+        <h1>Ricochet Rumbles</h1>
         <div class="menu-item">
-          <a href="http://localhost:5500/twoPlayer.html" class="menu-item"
-            >2 Player</a
-          >
+          <a href="/settings.html?mode=2player" class="menu-item">2 Player</a>
         </div>
         <div class="menu-item">
-          <a href="http://localhost:5500/bot.html" class="menu-item">Bot</a>
+          <a href="/settings.html?mode=bot" class="menu-item">Bot</a>
         </div>
       </div>
     </div>
