--- a/bot.html
+++ b/bot.html
@@ -44,6 +44,9 @@
         <div class="history">
           <h1>History</h1>
         </div>
+        <div class="spells">
+          <h2>Spells</h2>
+        </div>
       </div>
       <div id="controlls"></div>
       <div>
