--- a/bot.html
+++ b/bot.html
@@ -25,6 +25,7 @@
       <audio id="semiRicochetBreakAudio" src="/Assets/semiRicochetBreak.mp3" />
       <audio id="swapAudio" src="/Assets/swap.mp3" />
       <audio id="gameStartAudio" src="/Assets/gameStart.mp3" />
+      <audio id="magicAudio" src="/Assets/magic.mp3" />
     </div>
     <div class="container">
       <div class="heading">
