--- a/settings.html
+++ b/settings.html
@@ -32,6 +32,10 @@
           <p class="label">Spells:</p>
           <input type="checkbox" name="spells" class="checkbox" />
         </div>
+        <div class="formField">
+          <p class="label">Undo and Redo:</p>
+          <input type="checkbox" name="undo_redo" class="checkbox" />
+        </div>
         <button type="button" class="button">Start</button>
       </form>
     </div>
