--- a/settings.html
+++ b/settings.html
@@ -36,6 +36,10 @@
           <p class="label">Undo and Redo:</p>
           <input type="checkbox" name="undo_redo" class="checkbox" />
         </div>
+        <div class="formField">
+          <p class="label">Tank Allows Bullet:</p>
+          <input type="checkbox" name="tankBullet" class="checkbox" />
+        </div>
         <button type="button" class="button">Start</button>
       </form>
     </div>
